<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:foregroundGravity="center"
        android:background="#e6ffffff"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="#bbbbbb"
            android:textSize="18dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="#bbbbbb"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_username_signup"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="#bbbbbb"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="#bbbbbb"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_password_signup"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textColorHint="#bbbbbb"
            android:textSize="18dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@drawable/btn_sign_selector"
            android:background="@drawable/btn_sign_selector"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>