<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bon2tv"
    tools:context=".activity.SignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_white"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signin_dlg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:onClick="signInDlg"
            android:textColor="@drawable/btn_sign_selector"
            android:background="@drawable/btn_sign_selector">

            <requestFocus />
        </Button>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/signup_dlg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:onClick="signUpDlg"
            android:textColor="@drawable/btn_sign_selector"
            android:background="@drawable/btn_sign_selector" />
    </LinearLayout>

</RelativeLayout>