<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingStart="45dp"
    tools:context=".fragment.profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xx xx"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/holo_green_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nenon19911016@gmail.com"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_padding">

        <Button
            android:id="@+id/link_to_artist"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_edit_profile"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/link_to_artist_profile"
            android:textAllCaps="false"
            android:nextFocusLeft="@+id/log_out"
            android:textColor="@android:color/white">
        </Button>

        <Button
            android:id="@+id/link_your_business"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/link_your_business"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_edit_profile"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/edit_profile"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_edit_profile"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/reset_password"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_edit_profile"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/log_out"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_log_out"
            android:nextFocusRight="@+id/link_to_artist"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>